fixed spacing

--- a/portfolio/src/custom-utilities.css
+++ b/portfolio/src/custom-utilities.css
@@ -470,12 +470,20 @@ a.nav4:hover{
   /* display: flex; */
   justify-content: center;
   text-align: center;
+  margin-left: 16%;
+}
+
+.features-topicss{
+  justify-content: center;
+  text-align: center;
+  margin-right: -3%;
 }
 
 .features-topicsss{
   /* display: flex; */
   justify-content: center;
   text-align: center;
+  margin-right: -3%;
 }
 
 .about {
@@ -848,11 +856,41 @@ form {
       width: 35%;
   }
     } 
-    @media (min-width: 1500px){
+    @media (max-width: 1500px){
     .features-topics{
       /* display: flex; */
       justify-content: center;
       text-align: center;
-      margin-left: 16%;
+      margin-left: -6%;
+    }
+  }
+  @media (max-width: 1500px){
+    .features-topicsss{
+      /* display: flex; */
+      margin-right: -22%;
+    }
+  }
+
+
+  @media (min-width: 1800px){
+    .features-topicsss{
+      /* display: flex; */
+      margin-right: -5%;
+    }
+  }
+
+  @media (min-width: 1510px){
+    .features-topicsss{
+      /* display: flex; */
+      margin-right: -2%;
+    }
+  }
+
+  @media (min-width: 1610px){
+    .features-topics{
+      /* display: flex; */
+      justify-content: center;
+      text-align: center;
+      margin-left: 17%;
     }
   }
